several changes made

--- a/backend/rest-customers/src/main/resources/application.properties
+++ b/backend/rest-customers/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 # Configuration file
 # key = value
+#quarkus.native.native-image-xmx="8g"
+
+#quarkus.container-image.image="mendra/user"
+#quarkus.container-image.name="hackprague-quarkus-customers"
